force-app/main/default/objects/Configuration_Message__c/Configuration_Message__c.object-meta.xml
<CustomObject>
    <label>Configuration Message</label>
    <nameField>
        <label>Configuration Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>