force-app/main/default/objects/Configuration_Message__c/fields/Inspect_Message__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Message__c</fullName>
    <label>Inspect Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>