force-app/main/default/objects/Configuration_Message__c/fields/InspectionMessage__c.field-meta.xml
<CustomField>
    <fullName>InspectionMessage__c</fullName>
    <label>Inspection Message OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>