force-app/main/default/objects/Configuration_Message__c/fields/Message_Key__c.field-meta.xml
<CustomField>
    <fullName>Message_Key__c</fullName>
    <label>Message Key OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>