force-app/main/default/objects/Configuration_Message__c/fields/MessageKey__c.field-meta.xml
<CustomField>
    <fullName>MessageKey__c</fullName>
    <label>Message Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>