force-app/main/default/objects/Configuration_Message__c/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <formula>Configuration_Product__r.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN Number</label>
    <type>Text</type>
</CustomField>