force-app/main/default/objects/Configuration_Message__c/fields/SideNumber__c.field-meta.xml
<CustomField>
    <fullName>SideNumber__c</fullName>
    <label>Space Side Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>