force-app/main/default/objects/Configuration_Message__c/fields/Space_Side_Number__c.field-meta.xml
<CustomField>
    <fullName>Space_Side_Number__c</fullName>
    <label>Space Side Number OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>